src/routes/index.module.css
.homepage {
  margin: 16px;
}

@media only screen and (min-width: 600px) {
  .homepage {
    display: grid;
    grid-template-columns: 1fr 2fr 1fr 7fr 1fr;
    gap: 10px;
    margin: 40px auto;
    max-width: 1180px;
  }
}


.avatar img {
  width: 180px;
  margin: 0 auto;
  display: block;
}

@media only screen and (min-width: 600px) {
  .avatar {
    grid-column-start: 2;
    margin: 0;
  }
}

@media only screen and (max-width: 600px) {
  .content {
    margin-top: 48px;
  }
}

@media only screen and (min-width: 600px) {
  .content {
    grid-column-start: 4;
  }
}

.nav {
  margin-top: 64px;
}

@media only screen and (min-width: 600px) {
  .nav {
    margin-top: 96px;
  }
}

.copyright {
  color: #827F72;
}

